--- a/en/index.html
+++ b/en/index.html
@@ -20,7 +20,7 @@
     <meta property="og:locale" content="en_EN">
     <meta property="og:site_name" content="Yigidosoft">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="../resources/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../resources/img/favicon.webp">
 
     <!-- Web fonts and Web Icons -->
     <link rel="stylesheet" href="../resources/fonts/opensans/stylesheet.css">
@@ -39,11 +39,11 @@
 
     <script type="text/javascript">
         function hover(element) {
-            element.setAttribute('src', '../resources/img/logo.png');
+            element.setAttribute('src', '../resources/img/logo.webp');
         }
 
         function unhover(element) {
-            element.setAttribute('src', '../resources/img/logo-gray.png');
+            element.setAttribute('src', '../resources/img/logo-gray.webp');
         }
     </script>
 
@@ -136,7 +136,7 @@
                             <!-- title and description -->
                             <div class="title-desc">
                                 <span class="logo">
-                                    <img class="light-logo" src="../resources/img/logo-gray.png" alt="Logo"
+                                    <img class="light-logo" src="../resources/img/logo-gray.webp" alt="Logo"
                                         onmouseover="hover(this);" onmouseout="unhover(this);">
                                 </span>
                                 <div class="scroll-downs">
@@ -213,7 +213,7 @@
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
                                     <!-- <i class="icon icon ion-cash"></i>-->
-                                    <img src="../resources/img/img1.png" />
+                                    <img src="../resources/img/img1.webp" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Logo Design</h4>
@@ -223,7 +223,7 @@
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="../resources/img/img6.png" />
+                                    <img src="../resources/img/img6.webp" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Software Development</h4>
@@ -242,7 +242,7 @@
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="../resources/img/img2.png" />
+                                    <img src="../resources/img/img2.webp" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Social Media Management</h4>
@@ -253,7 +253,7 @@
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="../resources/img/img8.png" />
+                                    <img src="../resources/img/img8.webp" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Mobile Application Development</h4>
