--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
         rel="stylesheet">
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/img/favicon.webp">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="tr_TR">
     <meta property="og:site_name" content="Yiğidosoft">
@@ -37,11 +37,11 @@
 
     <script type="text/javascript">
         function hover(element) {
-            element.setAttribute('src', 'resources/img/logo.png');
+            element.setAttribute('src', 'resources/img/logo.webp');
         }
 
         function unhover(element) {
-            element.setAttribute('src', 'resources/img/logo-gray.png');
+            element.setAttribute('src', 'resources/img/logo-gray.webp');
         }
     </script>
 
@@ -134,7 +134,7 @@
                             <!-- title and description -->
                             <div class="title-desc">
                                 <span class="logo">
-                                    <img class="light-logo" src="resources/img/logo-gray.png" alt="Logo"
+                                    <img class="light-logo" src="resources/img/logo-gray.webp" alt="Logo"
                                         onmouseover="hover(this);" onmouseout="unhover(this);">
                                 </span>
                                 <div class="scroll-downs">
@@ -210,7 +210,7 @@
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
                                     <!-- <i class="icon icon ion-cash"></i>-->
-                                    <img src="resources/img/img1.png" />
+                                    <img src="resources/img/img1.webp" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Logo Tasarım</h4>
@@ -220,7 +220,7 @@
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="resources/img/img6.png" />
+                                    <img src="resources/img/img6.webp" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Yazılım Geliştirme</h4>
@@ -239,7 +239,7 @@
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="resources/img/img2.png" />
+                                    <img src="resources/img/img2.webp" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Sosyal Medya Yönetimi</h4>
@@ -250,7 +250,7 @@
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="resources/img/img8.png" />
+                                    <img src="resources/img/img8.webp" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Mobil Uygulama Geliştirme</h4>
