--- a/404.html
+++ b/404.html
@@ -114,7 +114,7 @@ permalink: /404.html
   <div class="buttons-con">
     <div class="action-link-wrap">
       <a onclick="history.back(-1)" class="link-button link-back-button">Geri Dön</a>
-      <a href="https://www.yigidosoft.com/" class="link-button">Ana Sayfaya Git</a>
+      <a href="/" class="link-button">Ana Sayfaya Git</a>
     </div>
   </div>
 </div>
