--- a/en/index.html
+++ b/en/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Yiğidosoft</title>
+    <title>Yiğidosoft | Web Design | Software | Website</title>
     <meta name="description"
         content="Get your first step with Yiğidosoft into the Digital World.
     We will highlight your personal brand in the Digital World, thanks to the website designing by our Yiğidosoft team. Get your perfect website right now and discover brutal success.">
@@ -18,7 +18,13 @@
     <link rel="alternate" href="https://yigidosoft.com/en" hreflang="en" />
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_EN">
-    <meta property="og:site_name" content="Yigidosoft">
+    <meta property="og:site_name" content="yigidosoft.com">
+    <meta name="imagetoolbar" content="no" />
+    <meta name="og:title" content="Yiğidosoft | Web Design | Software | Website" />
+    <meta name="og:site_name" content="yigidosoft.com" />
+    <meta name="og:url" content="https://yigidosoft.com/" />
+    <meta name="og:type" content="customer" />
+    <link rel="canonical" href="https://yigidosoft.com/" />
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="../resources/img/favicon.webp">
 
@@ -90,19 +96,19 @@
                 <li class="nav-item" data-menuanchor="home">
                     <a href="#home">
                         <i class="icon ion-ios-home"></i>
-                        <span class="txt">Home Page</span>
+                        <span class="txt" title="Web Design Home Page">Home Page</span>
                     </a>
                 </li>
                 <li class="nav-item" data-menuanchor="services">
                     <a href="#services">
                         <i class="icon ion-clipboard"></i>
-                        <span class="txt">Our Services</span>
+                        <span class="txt" title="Web Design Our Services">Our Services</span>
                     </a>
                 </li>
                 <li class="nav-item" data-menuanchor="contact">
                     <a href="#contact">
                         <i class="icon ion-email"></i>
-                        <span class="txt">Contact Us</span>
+                        <span class="txt" title="Web Design Contact Us">Contact Us</span>
                     </a>
                 </li>
             </ul>
@@ -146,11 +152,11 @@
                                 </div>
                                 
                                 <div class="home-buttons">
-                                    <a style="color:#fff;" id="dc-icon" target="_blank" href="https://discord.gg/t7qgzBRr2C">
+                                    <a style="color:#fff;" id="dc-icon" target="_blank"  title="Web Design Discord" href="https://discord.gg/t7qgzBRr2C">
                                         <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><path fill="white" d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011a.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0a8.258 8.258 0 0 0-.412-.833a.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02a.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059a.051.051 0 0 0-.018-.011a8.875 8.875 0 0 1-1.248-.595a.05.05 0 0 1-.02-.066a.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085a8.254 8.254 0 0 1-1.249.594a.05.05 0 0 0-.03.03a.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019a13.235 13.235 0 0 0 4.001-2.02a.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612c0-.889.637-1.613 1.438-1.613c.807 0 1.45.73 1.438 1.613c0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612c0-.889.637-1.613 1.438-1.613c.807 0 1.451.73 1.438 1.613c0 .888-.631 1.612-1.438 1.612Z"/></svg>
                                         Join Our Discord Server
                                     </a>
-                                    <a style="color:#fff;" id="gp-icon" target="_blank" href="https://play.google.com/store/apps/dev?id=4998248358292398038">
+                                    <a style="color:#fff;" id="gp-icon" target="_blank" title="Web Design Google Play Store" href="https://play.google.com/store/apps/dev?id=4998248358292398038">
                                         <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" width="1em" height="1em" preserveAspectRatio="xMidYMid meet" viewBox="0 0 32 32"><path fill="white" d="M20.331 14.644L6.537.813l17.55 10.075zM2.938 0c-.813.425-1.356 1.2-1.356 2.206v27.581c0 1.006.544 1.781 1.356 2.206l16.038-16zm26.574 14.1l-3.681-2.131L21.725 16l4.106 4.031l3.756-2.131c1.125-.893 1.125-2.906-.075-3.8zM6.538 31.188l17.55-10.075l-3.756-3.756z"/></svg>                                        
                                         Browse Our Mobile Apps
                                     </a>
@@ -213,7 +219,7 @@
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
                                     <!-- <i class="icon icon ion-cash"></i>-->
-                                    <img src="../resources/img/img1.webp" />
+                                    <img src="../resources/img/img1.webp" title="Logo Design" alt="Logo Design" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Logo Design</h4>
@@ -223,7 +229,7 @@
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="../resources/img/img6.webp" />
+                                    <img src="../resources/img/img6.webp" title="Software Development" alt="Software Development" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Software Development</h4>
@@ -242,7 +248,7 @@
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="../resources/img/img2.webp" />
+                                    <img src="../resources/img/img2.webp" title="Social Media Management" alt="Social Media Management" />
                                 </div>
                                 <div class="media-body">
                                     <h4>Social Media Management</h4>
@@ -253,7 +259,7 @@
                             <!-- a media object -->
                             <div class="media" style="margin-bottom:10px;">
                                 <div class="img d-flex">
-                                    <img src="../resources/img/img8.webp" />
+                                    <img src="../resources/img/img8.webp"  title="Mobile Application Development" alt="Mobile Application Development"/>
                                 </div>
                                 <div class="media-body">
                                     <h4>Mobile Application Development</h4>
@@ -292,7 +298,7 @@
                                 <div class="item-wrapper">
                                     <div class="browser-mockup">
                                         <div class="content"
-                                            style="background-image: url(https://i.hizliresim.com/pe2alni.png)"></div>
+                                            style="background-image: url(https://i.hizliresim.com/pe2alni.png)" title="Web Design" alt="Web Design"></div>
                                     </div>
                                 </div>
                             </li>
@@ -301,7 +307,7 @@
                                 <div class="item-wrapper">
                                     <div class="browser-mockup">
                                         <div class="content"
-                                            style="background-image: url(https://i.hizliresim.com/eevyrhz.jpg)"></div>
+                                            style="background-image: url(https://i.hizliresim.com/eevyrhz.jpg)" title="Web Design" alt="Web Design"></div>
                                     </div>
                                 </div>
                             </li>
@@ -309,7 +315,7 @@
                             <li class="slide-item swiper-slide">
                                 <div class="item-wrapper">
                                     <div class="browser-mockup">
-                                        <div class="content" style="background-image: url(https://i.hizliresim.com/mrzp4zt.png)"></div>
+                                        <div class="content" style="background-image: url(https://i.hizliresim.com/mrzp4zt.png)" title="Web Design" alt="Web Design"></div>
                                     </div>
                                 </div>
                             </li>
@@ -317,7 +323,7 @@
                             <li class="slide-item swiper-slide">
                                 <div class="item-wrapper">
                                     <div class="browser-mockup">
-                                        <div class="content" style="background-image: url(https://i.hizliresim.com/7ziqk8w.jpg)"></div>
+                                        <div class="content" style="background-image: url(https://i.hizliresim.com/7ziqk8w.jpg)" title="Web Design" alt="Web Design"></div>
                                     </div>
                                 </div>
                             </li>
