--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 </div>
                                 <div class="home-buttons">
                                     <a style="color:#fff;" id="dc-icon" target="_blank" title="Web Tasarım Discord"
-                                        href="https://discord.gg/t7qgzBRr2C">
+                                        href="https://discord.gg/t7qgzBRr2C" rel="nofollow">
                                         <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img"
                                             width="1em" height="1em" preserveAspectRatio="xMidYMid meet"
                                             viewBox="0 0 16 16">
@@ -159,7 +159,7 @@
                                         Discord Sunucumuza Katıl
                                     </a>
                                     <a style="color:#fff;" id="gp-icon" target="_blank" title="Web Tasarım Google Play Store"
-                                        href="https://play.google.com/store/apps/dev?id=4998248358292398038">
+                                        href="https://play.google.com/store/apps/dev?id=4998248358292398038" rel="nofollow">
                                         <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img"
                                             width="1em" height="1em" preserveAspectRatio="xMidYMid meet"
                                             viewBox="0 0 32 32">
@@ -504,27 +504,27 @@
 
             <ul class="social">
                 <li>
-                    <a href="https://twitter.com/yigidosoft" target="_blank">
+                    <a href="https://twitter.com/yigidosoft" target="_blank" rel="nofollow">
                         <i class="icon fa fa-twitter"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/UCgOpGOvYj73OtIb2UoAw1fQ" target="_blank">
+                    <a href="https://www.youtube.com/channel/UCgOpGOvYj73OtIb2UoAw1fQ" target="_blank" rel="nofollow">
                         <i class="icon fa fa-youtube"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://discord.gg/t7qgzBRr2C" target="_blank">
+                    <a href="https://discord.gg/t7qgzBRr2C" target="_blank" rel="nofollow">
                         <span class="iconify" data-icon="simple-icons:discord"></span>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/company/yigidosoft" target="_blank">
+                    <a href="https://www.linkedin.com/company/yigidosoft" target="_blank" rel="nofollow">
                         <i class="icon fa fa-linkedin"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/yigidosoft/" target="_blank">
+                    <a href="https://www.instagram.com/yigidosoft/" target="_blank" rel="nofollow">
                         <i class="icon fa fa-instagram"></i>
                     </a>
                 </li>
