--- a/en/index.html
+++ b/en/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Yiğidosoft | Web Design | Software | Website</title>
     <meta name="title" content="Yiğidosoft | Web Design | Software | Website" />
+    <meta name="robots" content="noodp, noydir" />
     <meta name="description"
         content="Get your first step with Yiğidosoft into the Digital World.
     We will highlight your personal brand in the Digital World, thanks to the website designing by our Yiğidosoft team. Get your perfect website right now and discover brutal success.">
