--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Yiğidosoft | Web Tasarım | Yazılım | İnternet Sitesi </title>
     <meta name="title" content="Yiğidosoft | Web Tasarım | Yazılım | İnternet Sitesi" />
+    <meta name="robots" content="noodp, noydir" />
     <meta name="description" content="Dijital Dünya'ya ilk adımı Yiğidosoft ile atın. Kişisel markanızı Yiğidosoft ekibimizin tasarlayacağı web sitesi sayesinde Dijital Dünya'da öne çıkaracağız.
     Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keşfedin.">
     <meta name="keywords"
