--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
                                         <!-- Message form container -->
                                         <form class="message form" method="post" id="formMessage" name="formMessage"
                                             accept-charset="utf-8"
-                                            action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfScvq22oxZ33BBm0P_P5LDYmywBTttvhNw5f68L6N3WcfwyA/formResponse">
+                                            action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfScvq22oxZ33BBm0P_P5LDYmywBTttvhNw5f68L6N3WcfwyA/formResponse" rel="nofollow">
                                             <div class="form-group name">
                                                 <label for="fullname">İsim</label>
                                                 <input id="fullname" name="entry.2041403057" type="text" placeholder=""
