--- a/en/index.html
+++ b/en/index.html
@@ -27,6 +27,7 @@
     <meta name="og:url" content="https://yigidosoft.com/" />
     <meta name="og:type" content="customer" />
     <link rel="canonical" href="https://yigidosoft.com/" />
+    <meta name="googlebot" content="noindex">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="../resources/img/favicon.webp">
 
