--- a/en/index.html
+++ b/en/index.html
@@ -360,12 +360,12 @@
                                         <div class="row info">
                                             <div class="col-12 col-sm-12 col-md-2 col-lg-2"></div>
 
-                                            <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                                            <div class="col-12 col-sm-12 col-md-4 col-lg-4 mailto">
                                                 <h5><i class="icon ion-android-call"></i> Phone</h5>
                                                 <p></p>
 
                                                 <h5><i class="icon ion-email"></i> Email</h5>
-                                                <p>info@yigidosoft.com</p>
+                                                <a href="mailto:info@yigidosoft.com">info@yigidosoft.com</a>
 
                                                 <h5><i class="icon ion-android-map"></i> Address</h5>
                                                 <p>Sivas / Turkey</p>
@@ -375,13 +375,14 @@
                                                 <p>Would you like to receive an offer?
                                                     Let us prepare the most suitable offer for you according to your
                                                     needs.</p>
-                                                <!-- Action button -->
+                                                <!-- Action button 
                                                 <div class="btns-action anim-4 mt-3">
                                                     <a class="btn btn-outline-white" href="#contact/message">
                                                         <span class="txt">Get An Offer Now</span>
                                                         <i class="icon fa fa-long-arrow-right ml-2"></i>
                                                     </a>
                                                 </div>
+                                                -->
                                             </div>
 
                                             <div class="col-12 col-sm-12 col-md-2 col-lg-2"></div>
@@ -403,15 +404,12 @@
             </div>
             <!-- end of information slide -->
 
-            <!-- begin of message slide -->
+            <!-- begin of message slide 
             <div class="slide" id="message" data-anchor="message">
-                <!-- Begin of slide section wrapper -->
                 <div class="section-wrapper center-vh dir-col">
                     <div class="row justify-content-between">
                         <div class="col-12 col-md-12 col-lg-12">
-                            <!-- content -->
                             <div class="section-content anim text-center">
-                                <!-- title and description -->
                                 <div class="title-desc">
                                     <div>
                                         <h2 class="display-4 display-title">Write A Message</h2>
@@ -423,12 +421,9 @@
                         </div>
 
                         <div class="col-12 col-md-12 col-lg-12">
-                            <!-- content -->
                             <div class="section-content anim text-left">
-                                <!-- title and description -->
                                 <div class="">
                                     <div class="form-container form-container-card">
-                                        <!-- Message form container -->
                                         <form class="message form" method="post" id="formMessage" name="formMessage"
                                             accept-charset="utf-8"
                                             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfScvq22oxZ33BBm0P_P5LDYmywBTttvhNw5f68L6N3WcfwyA/formResponse" rel="nofollow">
@@ -475,9 +470,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- End of slide section wrapper -->
             </div>
-            <!-- end of message slide -->
+            end of message slide -->
         </div>
         <!-- End of contact section -->
     </main>
