--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Dijital Dünya'ya ilk adımı Yiğidosoft ile atın. Kişisel markanızı Yiğidosoft ekibimizin tasarlayacağı web sitesi sayesinde Dijital Dünya'da öne çıkaracağız.
     Hemen siz de mükemmel bir web sitesi sahibi olun ve acımasız başarıyı keşfedin.">
     <meta name="keywords"
-        content="yigidosoft, yiğido, yigido, sivas, web tasarım, logo tasarım, web yazılım, web sitesi, sivas web tasarım, web tasarım firması, seo, one page site tasarımı, kurumsal site tasarımı, mobil uyumlu site," />
+        content="yigidosoft web tasarım, yiğidosoft, yiğido, sivas, web tasarım, logo tasarım, web yazılım, web sitesi, sivas web tasarım, web tasarım firması, seo, one page site tasarımı, kurumsal site tasarımı, mobil uyumlu site," />
     <meta name="author" content="Yigidosoft" />
     <meta name="referrer" content="origin">
     <meta name="viewport" content="width=device-width, initial-scale=0.4">
@@ -371,12 +371,12 @@
                                         <div class="row info">
                                             <div class="col-12 col-sm-12 col-md-2 col-lg-2"></div>
 
-                                            <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+                                            <div class="col-12 col-sm-12 col-md-4 col-lg-4 mailto">
                                                 <h5><i class="icon ion-android-call"></i> Telefon</h5>
                                                 <p></p>
 
                                                 <h5><i class="icon ion-email"></i> E-Posta</h5>
-                                                <p>info@yigidosoft.com</p>
+                                                <a href="mailto:info@yigidosoft.com">info@yigidosoft.com</a>
 
                                                 <h5><i class="icon ion-android-map"></i> Adres</h5>
                                                 <p>Sivas / Türkiye</p>
@@ -385,13 +385,13 @@
                                             <div class="col-12 col-sm-12 col-md-4 col-lg-4">
                                                 <p>Teklif almak ister misiniz? Size özel en uygun teklifimizi
                                                     ihtiyaçlarınıza göre hazırlayalım.</p>
-                                                <!-- Action button -->
+                                                <!-- Action button 
                                                 <div class="btns-action anim-4 mt-3">
                                                     <a class="btn btn-outline-white" href="#contact/message">
                                                         <span class="txt">Şimdi Teklif Alın</span>
                                                         <i class="icon fa fa-long-arrow-right ml-2"></i>
                                                     </a>
-                                                </div>
+                                                </div>-->
                                             </div>
 
                                             <div class="col-12 col-sm-12 col-md-2 col-lg-2"></div>
@@ -413,15 +413,12 @@
             </div>
             <!-- end of information slide -->
 
-            <!-- begin of message slide -->
+            <!-- begin of message slide 
             <div class="slide" id="message" data-anchor="message">
-                <!-- Begin of slide section wrapper -->
                 <div class="section-wrapper center-vh dir-col">
                     <div class="row justify-content-between">
                         <div class="col-12 col-md-12 col-lg-12">
-                            <!-- content -->
                             <div class="section-content anim text-center">
-                                <!-- title and description -->
                                 <div class="title-desc">
                                     <div>
                                         <h2 class="display-4 display-title">MESAJ YAZIN</h2>
@@ -433,12 +430,9 @@
                         </div>
 
                         <div class="col-12 col-md-12 col-lg-12">
-                            <!-- content -->
                             <div class="section-content anim text-left">
-                                <!-- title and description -->
                                 <div class="">
                                     <div class="form-container form-container-card">
-                                        <!-- Message form container -->
                                         <form class="message form" method="post" id="formMessage" name="formMessage"
                                             accept-charset="utf-8"
                                             action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfScvq22oxZ33BBm0P_P5LDYmywBTttvhNw5f68L6N3WcfwyA/formResponse" rel="nofollow">
@@ -485,9 +479,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- End of slide section wrapper -->
             </div>
-            <!-- end of message slide -->
+             end of message slide -->
         </div>
         <!-- End of contact section -->
     </main>
