--- a/test/index.html
+++ b/test/index.html
@@ -74,9 +74,9 @@
     <div class="phone-image-div reveal fade-background-left"></div>
 
     <div class="container-title" id="products">
-        <h2 class="reveal fade-bottom">Explore<span class="color-primary"></span>Our Products</h2>
-        <p class="reveal fade-bottom">I'm a paragraph. Click here to add your own text and edit me. It’s
-            easy. Just click “Edit Text” or double click me to add your own content and make changes to the font.</p>
+        <h2 class="reveal fade-bottom">Explore <span class="color-primary"></span>Our Products</h2>
+        <p class="reveal fade-bottom">Apps from Yiğidosoft to help you get the most out of your day, across all your
+            devices.</p>
     </div>
 
     <div class="container">
@@ -121,8 +121,9 @@
                     </div>
                 </div>
                 <div class="bg-product-description">
-                    <p>I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a
-                        story and let your users know a little more about you.</p>
+                    <p>Wordaily is now in your pocket. Guess a word and use the colors of the boxes to help guide your
+                        next decision. You have 6 tries to guess the correct word. Every 24 hours there is a new word of
+                        the day and it is up to you to figure out what it is.</p>
                 </div>
                 <div class="appdown">
                     <a href="https://play.google.com/store/apps/details?id=com.yigidosoft.wordaily" target="_blank">
@@ -148,8 +149,10 @@
                     </div>
                 </div>
                 <div class="bg-product-description">
-                    <p>I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a
-                        story and let your users know a little more about you.</p>
+                    <p>Wallsdrobe offers you the best background wallpapers for free.
+                        Personalize your phone by easily downloading HD wallpapers.
+                        Benefit from a constantly enriching collection, we offer you more and more wallpapers every day.
+                    </p>
                 </div>
                 <div class="appdown">
                     <a href="https://play.google.com/store/apps/details?id=com.yigidosoft.wallsdrobe" target="_blank">
@@ -175,8 +178,8 @@
                     </div>
                 </div>
                 <div class="bg-product-description">
-                    <p>I'm a paragraph. Click here to add your own text and edit me. I’m a great place for you to tell a
-                        story and let your users know a little more about you.</p>
+                    <p>Color your phone with Sivasspor Wallpapers app. Set the newly added Sivasspor wallpapers as your
+                        phone background now.</p>
                 </div>
                 <div class="appdown">
                     <a href="https://play.google.com/store/apps/details?id=com.mobiroller.mobi408693277272"
@@ -191,10 +194,38 @@
         </div>
     </div>
 
+    <div class="container-title" id="products">
+        <h2 class="reveal fade-bottom">Explore <span class="color-primary"></span>Our Web Projects</h2>
+        <p class="reveal fade-bottom">We build your website software processes and create search engine friendly mobile
+            compatible sites.</p>
+    </div>
+
+    <div class="web-project-slider reveal fade-bottom">
+        <div class="browser-mockup">
+            <div class="image-content" style="background-image: url(https://i.hizliresim.com/7ziqk8w.jpg)"
+                title="Web Tasarım" alt="Web Tasarım">
+            </div>
+            <div class="image-content" style="background-image: url(https://i.hizliresim.com/pe2alni.png)"
+                title="Web Tasarım" alt="Web Tasarım">
+            </div>
+
+            <a class="arrow-left" onClick="plusDivs(-1);"><i class="uil uil-angle-left-b"></i></a>
+            <a class="arrow-right" onClick="plusDivs(+1);"><i class="uil uil-angle-right-b"></i></a>
+
+            <div class="pagination">
+                <span class="dot active" onClick="currentDiv(1);"></span>
+                <span class="dot" onClick="currentDiv(2);"></span>
+            </div>
+        </div>
+    </div>
+
+
     <div class="container-title" id="sponsors">
-        <h2 class="reveal fade-bottom">Explore<span class="color-primary"></span>Our Sponsors</h2>
-        <p class="reveal fade-bottom">I'm a paragraph. Click here to add your own text and edit me. It’s
-            easy. Just click “Edit Text” or double click me to add your own content and make changes to the font.</p>
+        <h2 class="reveal fade-bottom">Explore <span class="color-primary"></span>Our Sponsors</h2>
+        <p class="reveal fade-bottom">We value our sponsors & partners. Support provided by corporations and businesses
+            allows for the development and implementation of Yiğidosoft programs, projects, and resources. Please
+            contact us for more information on the opportunity to sponsor. (<a
+                href="mailto:sponsor@yigidosoft.com">sponsor@yigidosoft.com</a>)</p>
     </div>
 
     <div class="sponsors reveal fade-bottom">
