test files updated

--- a/test/index.html
+++ b/test/index.html
@@ -35,8 +35,8 @@
         <div class="nav-menu">
             <ul>
                 <li><a href="/" class="active">Home</a></li>
-                <li><a href="#products">Products</a></li>
                 <li><a href="/about">About</a></li>
+                <li><a href="#products">Products</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="/careers">Careers</a></li>
                 <li><a href="/contact">Contact</a></li>
@@ -50,8 +50,8 @@
             <!-- Overlay content -->
             <div class="mobile-menu-content">
                 <a href="/" class="active" onclick="closeNav()">Home</a>
-                <a href="#products" onclick="closeNav()">Products</a>
                 <a href="/about" onclick="closeNav()">About</a>
+                <a href="#products" onclick="closeNav()">Products</a>
                 <a href="#sponsors" onclick="closeNav()">Sponsors</a>
                 <a href="/careers" onclick="closeNav()">Careers</a>
                 <a href="/contact" onclick="closeNav()">Contact</a>
@@ -74,7 +74,7 @@
     <div class="phone-image-div reveal fade-background-left"></div>
 
     <div class="container-title" id="products">
-        <h2 class="reveal fade-bottom">Explore <span class="color-primary"></span>Our Products</h2>
+        <h2 class="reveal fade-bottom">Explore <span class="color-primary"></span>Our Mobile Apps</h2>
         <p class="reveal fade-bottom">Apps from Yiğidosoft to help you get the most out of your day, across all your
             devices.</p>
     </div>
@@ -194,7 +194,7 @@
         </div>
     </div>
 
-    <div class="container-title" id="products">
+    <div class="container-title">
         <h2 class="reveal fade-bottom">Explore <span class="color-primary"></span>Our Web Projects</h2>
         <p class="reveal fade-bottom">We build your website software processes and create search engine friendly mobile
             compatible sites.</p>
@@ -242,6 +242,26 @@
             <a href="#"><img src="resources/sponsors/sponsor.png"></a>
         </div>
     </div>
+
+    <div class="contact-section">
+        <div class="contact-title" id="contact">
+            <h2 class="reveal fade-bottom">Contact Us</h2>
+            <p class="reveal fade-bottom">Would you like to receive an offer? Let us prepare the most suitable offer for you
+                according to your needs.</p>
+            <a class="send-mail reveal fade-bottom" href="mailto:info@yigidosoft.com">Send us an e-mail</a>
+        </div>
+    </div>
+    
+
+
+
+
+
+
+
+
+
+
 
     <footer>
         <div class="content">
