test files updated

--- a/test/index.html
+++ b/test/index.html
@@ -66,12 +66,12 @@
     </div>
 
     <div class="home-info">
-        <h1>Yiğidosoft<span class="color-primary"></span> Corporation</h1>
+        <h1>Yiğidosoft <span class="color-primary"></span> Corporation</h1>
         <p>Creating the Very Best in Mobile Application and Web Programming</p>
     </div>
 
 
-    <div class="phone-image-div reveal fade-background-left"></div>
+    <div class="phone-image-div"></div>
 
     <div class="container-title" id="products">
         <h2 class="reveal fade-bottom">Explore <span class="color-primary"></span>Our Mobile Apps</h2>
@@ -253,7 +253,7 @@
     </div>
     
 
-
+    <div class="phone-image-div"></div>
 
 
 
