--- a/test/index.html
+++ b/test/index.html
@@ -253,7 +253,9 @@
     </div>
     
 
-    <div class="phone-image-div"></div>
+    <div class="bg">
+        <div class="phone-image-div"></div>
+    </div>
 
 
 
