--- a/test/index.html
+++ b/test/index.html
@@ -39,7 +39,7 @@
                 <li><a href="#products">Products</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="/careers">Careers</a></li>
-                <li><a href="/contact">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
         <div id="mobile" class="mobile-menu">
@@ -54,7 +54,7 @@
                 <a href="#products" onclick="closeNav()">Products</a>
                 <a href="#sponsors" onclick="closeNav()">Sponsors</a>
                 <a href="/careers" onclick="closeNav()">Careers</a>
-                <a href="/contact" onclick="closeNav()">Contact</a>
+                <a href="#contact" onclick="closeNav()">Contact</a>
             </div>
 
         </div>
@@ -71,7 +71,9 @@
     </div>
 
 
-    <div class="phone-image-div"></div>
+    <div class="phone-image-div">
+        <img src="resources/images/app-two-hand.png" alt="">
+    </div>
 
     <div class="container-title" id="products">
         <h2 class="reveal fade-bottom">Explore <span class="color-primary"></span>Our Mobile Apps</h2>
@@ -253,10 +255,9 @@
     </div>
     
 
-    <div class="bg">
-        <div class="phone-image-div"></div>
+    <div class="phone-image-div">
+        <img src="resources/images/blm.png" alt="">
     </div>
-
 
 
 
@@ -291,10 +292,10 @@
             <div class="bottom_text">
                 <span class="copyright_text">Copyright &#169; 2022 <a href="/">Yiğidosoft.</a>All rights reserved</span>
                 <span class="policy_terms">
-                    <a href="https://yigidosoft.com/documentation/docs/#faqs">FAQ</a>
-                    <a href="https://yigidosoft.com/documentation/docs/#cookie-policy">Cookie Policy</a>
-                    <a href="https://yigidosoft.com/documentation/docs/#privacy-policy">Privacy Policy</a>
-                    <a href="https://yigidosoft.com/documentation/docs/#terms-of-service">Terms & Service</a>
+                    <a href="https://yigidosoft.com/documentation/docs/#faqs" target="_blank">FAQ</a>
+                    <a href="https://yigidosoft.com/documentation/docs/#cookie-policy" target="_blank">Cookie Policy</a>
+                    <a href="https://yigidosoft.com/documentation/docs/#privacy-policy" target="_blank">Privacy Policy</a>
+                    <a href="https://yigidosoft.com/documentation/docs/#terms-of-service" target="_blank">Terms & Service</a>
                 </span>
             </div>
         </div>
