--- a/test/index.html
+++ b/test/index.html
@@ -205,10 +205,10 @@
     <div class="web-project-slider reveal fade-bottom">
         <div class="browser-mockup">
             <div class="image-content" style="background-image: url(https://i.hizliresim.com/7ziqk8w.jpg)"
-                title="Web Tasarım" alt="Web Tasarım">
+                title="Web Tasarım" alt="Web Design">
             </div>
             <div class="image-content" style="background-image: url(https://i.hizliresim.com/pe2alni.png)"
-                title="Web Tasarım" alt="Web Tasarım">
+                title="Web Tasarım" alt="Web Design">
             </div>
 
             <a class="arrow-left" onClick="plusDivs(-1);"><i class="uil uil-angle-left-b"></i></a>
@@ -245,6 +245,7 @@
         </div>
     </div>
 
+    <div class="fun"><img src="resources/images/fun.png" alt=""></div>
     <div class="contact-section">
         <div class="contact-title" id="contact">
             <h2 class="reveal fade-bottom">Contact Us</h2>
@@ -254,11 +255,6 @@
         </div>
     </div>
     
-
-    <div class="phone-image-div">
-        <img src="resources/images/blm.png" alt="">
-    </div>
-
 
 
 
