--- a/careers/index.html
+++ b/careers/index.html
@@ -35,11 +35,11 @@
         <div class="nav-menu">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="#products">Products</a></li>
-                <li><a href="#sponsors">Sponsors</a></li>
-                <li><a href="/careers" class="active">Careers</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://yigidosoft.com/#about">About</a></li>
+                <li><a href="https://yigidosoft.com/#products">Products</a></li>
+                <li><a href="https://yigidosoft.com/#sponsors">Sponsors</a></li>
+                <li><a href="https://yigidosoft.com/careers" class="active">Careers</a></li>
+                <li><a href="https://yigidosoft.com/#contact">Contact</a></li>
             </ul>
         </div>
         <div id="mobile" class="mobile-menu">
@@ -50,11 +50,11 @@
             <!-- Overlay content -->
             <div class="mobile-menu-content">
                 <a href="/"onclick="closeNav()">Home</a>
-                <a href="/about" onclick="closeNav()">About</a>
-                <a href="#products" onclick="closeNav()">Products</a>
-                <a href="#sponsors" onclick="closeNav()">Sponsors</a>
-                <a href="/careers" class="active" onclick="closeNav()">Careers</a>
-                <a href="#contact" onclick="closeNav()">Contact</a>
+                <a href="https://yigidosoft.com/#about" onclick="closeNav()">About</a>
+                <a href="https://yigidosoft.com/#products" onclick="closeNav()">Products</a>
+                <a href="https://yigidosoft.com/#sponsors" onclick="closeNav()">Sponsors</a>
+                <a href="https://yigidosoft.com/careers" class="active" onclick="closeNav()">Careers</a>
+                <a href="https://yigidosoft.com/#contact" onclick="closeNav()">Contact</a>
             </div>
 
         </div>
