--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
     <script type="text/javascript" src="resources/js/script.js"></script>
 	<script src="resources/js/particles.min.js"></script>
     <script src="resources/js/init-particles.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
         $(document).ready(function () {
             $("a").on('click', function (event) {
