--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#products">Products</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
-                <li><a href="/careers">Careers</a></li>
+                <!--<li><a href="/careers">Careers</a></li>-->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -53,7 +53,7 @@
                 <a href="#about" onclick="closeNav()">About</a>
                 <a href="#products" onclick="closeNav()">Products</a>
                 <a href="#sponsors" onclick="closeNav()">Sponsors</a>
-                <a href="/careers" onclick="closeNav()">Careers</a>
+                <!--<a href="/careers" onclick="closeNav()">Careers</a>-->
                 <a href="#contact" onclick="closeNav()">Contact</a>
             </div>
 
