--- a/index.html
+++ b/index.html
@@ -249,16 +249,16 @@
 
     <div class="sponsors reveal fade-bottom">
         <div class="sponsor">
-            <a href="#"><img src="resources/sponsors/sponsor.png"></a>
+            <a href="#"><img src="resources/sponsors/sponsor.webp"></a>
         </div>
         <div class="sponsor">
-            <a href="#"><img src="resources/sponsors/sponsor.png"></a>
+            <a href="#"><img src="resources/sponsors/sponsor.webp"></a>
         </div>
         <div class="sponsor">
-            <a href="#"><img src="resources/sponsors/sponsor.png"></a>
+            <a href="#"><img src="resources/sponsors/sponsor.webp"></a>
         </div>
         <div class="sponsor">
-            <a href="#"><img src="resources/sponsors/sponsor.png"></a>
+            <a href="#"><img src="resources/sponsors/sponsor.webp"></a>
         </div>
     </div>
 
