--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
         <div class="nav-menu">
             <ul>
                 <li><a href="/" class="active">Home</a></li>
-                <li><a href="#about">About</a></li>
                 <li><a href="#products">Products</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
-                <!--<li><a href="/careers">Careers</a></li>-->
+                <!--
+                <li><a href="#about">About</a></li>
+                <li><a href="/careers">Careers</a></li>
+                -->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -50,10 +52,12 @@
             <!-- Overlay content -->
             <div class="mobile-menu-content">
                 <a href="/" class="active" onclick="closeNav()">Home</a>
-                <a href="#about" onclick="closeNav()">About</a>
                 <a href="#products" onclick="closeNav()">Products</a>
                 <a href="#sponsors" onclick="closeNav()">Sponsors</a>
-                <!--<a href="/careers" onclick="closeNav()">Careers</a>-->
+                <!--
+                <a href="#about" onclick="closeNav()">About</a>
+                <a href="/careers" onclick="closeNav()">Careers</a>
+                -->
                 <a href="#contact" onclick="closeNav()">Contact</a>
             </div>
 
@@ -222,10 +226,10 @@
     <div class="web-project-slider reveal fade-bottom">
         <div class="browser-mockup">
             <div class="image-content" style="background-image: url(https://i.hizliresim.com/7ziqk8w.jpg)"
-                title="Web Tasarım" alt="Web Design">
+                title="Web Design" alt="Web Design">
             </div>
             <div class="image-content" style="background-image: url(https://i.hizliresim.com/pe2alni.png)"
-                title="Web Tasarım" alt="Web Design">
+                title="Web Design" alt="Web Design">
             </div>
 
             <a class="arrow-left" onClick="plusDivs(-1);"><i class="uil uil-angle-left-b"></i></a>
