--- a/index.html
+++ b/index.html
@@ -317,12 +317,12 @@
         <div class="bottom-details">
             <div class="bottom_text">
                 <span class="copyright_text">Copyright &#169; 2017 <a href="/" translate="no">Yiğidosoft.</a>All rights reserved</span>
-                <span class="policy_terms">
-                    <a href="https://yigidosoft.com/documentation/docs/#faqs" target="_blank">FAQ</a>
-                    <a href="https://yigidosoft.com/documentation/docs/#cookie-policy" target="_blank">Cookie Policy</a>
-                    <a href="https://yigidosoft.com/documentation/docs/#privacy-policy" target="_blank">Privacy
+                <span>
+                    <a href="https://yigidosoft.com/documentation/docs/#faqs" onClick="window.open('https://yigidosoft.com/documentation/docs/#faqs', '_blank');">FAQ</a>
+                    <a href="https://yigidosoft.com/documentation/docs/#cookie-policy" onClick="window.open('https://yigidosoft.com/documentation/docs/#cookie-policy', '_blank');">Cookie Policy</a>
+                    <a href="https://yigidosoft.com/documentation/docs/#privacy-policy" onClick="window.open('https://yigidosoft.com/documentation/docs/#privacy-policy', '_blank');">Privacy
                         Policy</a>
-                    <a href="https://yigidosoft.com/documentation/docs/#terms-of-service" target="_blank">Terms &
+                    <a href="https://yigidosoft.com/documentation/docs/#terms-of-service" onClick="window.open('https://yigidosoft.com/documentation/docs/#terms-of-service', '_blank');">Terms &
                         Service</a>
                 </span>
             </div>
