--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <div class="about-home" id="about">
         <div id="particles"></div>
-        <div class="about-title reveal fade-bottom">
+        <div class="about-title">
             <h2>For the Love of the Software</h2>
             <p>
                 Get your first step with <span translate="no">Yiğidosoft</span> into the Digital World.<br>
