update build for gh-pages

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title translate="no">Yiğidosoft</title>
+    <title translate="no">Yiğidosoft - Free Mobile Apps</title>
 
     <!--Iconscout CSS -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
